# SwarmCity

./: .gitignore  404.html  ARCHITECTURE.html  Agent Handoff Summary.md  CHANGELOG.md  CLI_REFERENCE.html  CNAME  CONTRIBUTING.md  CREDITS.html  DRIFT_CHECK_SETUP.html  INTEGRATION_PLAN.html  PLATFORM_SETUP.html  README.md  ROLES.html  SECURITY.html  SWARMS_AI_PR_GUIDE.html  WORKFLOW.html  dot-swarm.rb  file-change-follower-0.3.3-patched.vsix  gen_logo.py  generate_logo.py  index.html  index.md  mkdocs.yml  pyproject.toml  sitemap.xml  swarm-city.rb.template
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-docs.yml  publish-pypi.yml  swarm-drift-check.yml  swarm-heal.yml  tests.yml
.swarm/: BOOTSTRAP.md  context.md  memory.md  queue.md  state.md
.swarm/workflows/: release.md
ARCHITECTURE/: index.html
CLI_REFERENCE/: index.html
CREDITS/: index.html
DRIFT_CHECK_SETUP/: index.html
INTEGRATION_PLAN/: index.html
PLATFORM_SETUP/: index.html
ROLES/: index.html
SWARMS_AI_PR_GUIDE/: index.html
assets/js/: just-the-docs.js  (+1 more)
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  CREDITS.md  DRIFT_CHECK_SETUP.md  INTEGRATION_PLAN.md  PLATFORM_SETUP.md  ROLES.md  SECURITY.md  SWARMS_AI_PR_GUIDE.md  WORKFLOW.md  _config.yml  index.md
search/: search_index.json
tests/: test_cli.py  test_concurrency.py  test_federation.py  test_hierarchy.py  test_mcp.py  test_migrate.py  test_operations.py  test_scheduler.py  test_seals.py  test_security.py  test_signing.py  test_strangers.py  test_swarms_provider.py  test_vault.py  test_workflows.py
(+40 files in other folders)
